@@ -1,3 +1,8 @@
+2009-07-20  Geoff Norton  <gnorton@novell.com>
+
+	* darwin_stop_world.c: Fix the x86 version guards to use Apple's
+	properly defined macros.
+
 2009-07-02  jonas echterhoff <jonas@unity3d.com>
 	
 	* darwin_stop_world.c: make debugger code compile on 
